# peft_playground

./: .gitignore  README.md  main.py  peft_document.md  pyproject.toml
configs/: glue_qwen_flora.yaml  glue_qwen_flora_cola.yaml  glue_qwen_lora.yaml  glue_qwen_lora_cola.yaml  glue_qwen_mam_cola.yaml  glue_qwen_sva_cola.yaml  qwen_mnli@glue_dora.yaml  qwen_mnli@glue_sva.yaml
scripts/: inspect_checkpoint.py  run_acc_miyabi.sh  run_accelerate_mpi.sh  run_torchrun_ddp.sh
scripts/fern/: run_2node.sh  run_2node_dora.sh  test.sh
src/peft_playground/: __init__.py  cli.py  config.py  pipeline.py
src/peft_playground/adapters/: MAMAdapter.py  __init__.py  base.py  dora.py  lora.py  serialization.py  sva.py  svd_base.py
src/peft_playground/training/: __init__.py  monitors.py  preparation.py  state.py  utils.py
src/peft_playground/training/runners/: __init__.py  accelerate_runner.py  base_runner.py  ddp_runner.py  trainer_runner.py
